<resources>
    <string name="app_name">Your Story</string>
    <!--navigation_bar-->
    <string name="reports_caps">REPORTS</string>
    <string name="today_caps">TODAY</string>
    <string name="diary_caps">DIARY</string>
    <!--toolbar_menu-->
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="reports">Reports</string>
    <string name="today">Today</string>
    <string name="diary">Diary</string>
    <string name="today_likert_heading">Emotional State:</string>

    <!--thought dialog -->
    <string name="likert_dialog_sub_heading">Record Emotional State</string>
    <string name="thought_dialog_top_heading">Create Thought</string>
    <string name="thought_dialog_audio">Voice</string>
    <string name="thought_dialog_image">Image</string>
    <string name="thought_dialog_location">Location</string>
    <string name="thought_dialog_text">Text</string>
    <string name="thought_dialog_heading">Includes:</string>
    <string name="thought_dialog_permission_location">Please allow location access for recording it.</string>
    <string name="thought_dialog_permission_camera">Please allow camera access to take a picture.</string>
    <string name="thought_dialog_permission_audio">Please allow microphone access for recording.</string>
    <string name="thought_dialog_permission_location_permanently">Please allow the location access in your settings. Its necessary for adding the location in a diary entry.</string>
    <string name="thought_dialog_permission_camera_permanently">Please allow camera access in your settings. Its necessary for adding a picture to your diary entry.</string>
    <string name="thought_dialog_permission_audio_permanently">Please allow microphone access in your settings. Its necessary for adding a recording to your diary entry.</string>
    <string name="add_thought_image_dialog_heading">Take a Picture</string>
    <string name="add_thought_audio_dialog_heading">Record some Audio</string>
    <string name="add_thought_text_dialog_heading">Write down some Text</string>
    <string name="add_thought_location_dialog_heading">Record a Location</string>
    <string name="add_location_fragment_loading_text">Please wait. Your location gets calculated.</string>
    <string name="add_thought_no_gps_dialog_heading">GPS disabled</string>
    <string name="add_thought_no_gps_text">Please enable GPS in your settings to record your location.</string>
    <string name="add_location_fragment_back_dialog_text">Back</string>
    <!-- help page -->
    <string name="your_story_help_page_heading">Welcome to your Story.</string>
    <string name="your_story_help_page_content">Your Story will provide you with an amazing possibility to capture interesting moments of your life in a diary
    like manner. \n \n Its a diary which allows you more than an ordinary diary, since you can enrich your entries with additional information like pictures and audio.
    On top of that you can use it to track your current emotional state based on six base emotions and you can plot graphs to check the development of your current mental state over time.
    \n \n \n We thank you for using this app and if you like you can leave us some feedback as a comment in the app store.
    </string>
    <string name="your_story_help_page_devs">Your developers</string>
    <!--likert dialog -->
    <string name="likert_dialog_heading">Current emotional state</string>
    <string name="likert_dialog_start">Adjust sliders corresponding to your emotions.</string>
    <string name="likert_dialog_joy">Joy</string>
    <string name="likert_dialog_surprise">Surprise</string>
    <string name="likert_dialog_anger">Anger</string>
    <string name="likert_dialog_sadness">Sadness</string>
    <string name="likert_dialog_fear">Fear</string>
    <string name="likert_dialog_disgust">Disgust</string>
    <string name="likert_intensity">Intensity</string>


    <!--Create Report-->
    <string name="create_report_heading">Create Report</string>
    <string name="create_report_select_dates_heading">Specify dates</string>
    <string name="create_report_select_dates_main_text">Please specify a date range to build potential diagrams.</string>
    <string name="create_report_confirm_dialog">Okay</string>
    <string name="create_report_joy_abbreviation">J</string>
    <string name="create_report_anger_abbreviation">A</string>
    <string name="create_report_surprise_abbreviation">S</string>
    <string name="create_report_sadness_abbreviation">S</string>
    <string name="create_report_disgust_abbreviation">D</string>
    <string name="create_report_fear_abbreviation">F</string>
    <string name="create_report_date">Date Range: </string>
    <!-- dialog ok cancel texts -->
    <string name="finish_dialog">Finish</string>
    <string name="cancel_dialog">Cancel</string>
    <!-- Preference Titles -->
    <string name="location_title">Location</string>
    <string name="settings_allow_data_collection_title">Movement Profiling</string>
    <string name="settings_allow_data_collection_summary">Allow data collection to generate a movement profile.</string>
    <string name="settings_scanning_interval_title">Interval for scanning</string>
    <string name="settings_scanning_interval_summary">If allowed, define an interval for scanning the location in minutes</string>
    <string name="notification">Notification</string>
    <string name="settings_enable_notifications">Enable notifications</string>
    <string name="settings_notification_interval_title">Notification interval</string>
    <string name="settings_notification_interval_text">Define an interval for sending notifications</string>

    <!-- Take a picture Dialog -->
    <string name="take_a_picture_title">No Picture selected</string>
    <string name="take_a_picture_text">You have to take a picture before submitting</string>
    <string name="thought_empty_dialog_title">Thought is empty</string>
    <string name="thought_empty_dialog_text">You have to specify at least one item before submitting a thought</string>
    <string name="thought_empty_dialog_ok_button">Okay</string>

    <!-- Record Text Dialog -->
    <string name="click_to_write_a_message">Tap here to write a text.</string>
    
    <!-- Record audio dialog -->
    <string name="record_audio_record_button">RECORD</string>
    <string name="record_audio_stop_button">STOP</string>
    <string name="record_audio_play_button">PLAY</string>
    <string name="record_audio_recorded_time">Recorded Time:</string>
    <!-- record audio dialog texts-->
    <string name="record_audio_no_audio_submit_heading">No voice recording</string>
    <string name="record_audio_no_audio_submit_main_text">There was no voice recording. Please record some audio before submitting.</string>
    <string name="record_audio_no_stop_possible_heading">Can\'t stop recording</string>
    <string name="record_audio_no_stop_possible_main_text">Please start first a recording before stopping it, else pressing stop won\'t have an effect.</string>
    <string name="record_audio_no_recording_play_heading">Can\'t play no recording</string>
    <string name="record_audio_no_recording_play_main_text">Please first do a recording before trying to play it.</string>
    <!-- Months -->
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <string name="settings_location_summary">Toggle, Intervall</string>
    <string name="notification_description">Toggle, Intervall</string>
    <string name="settings_diary_description">Backup, Export, Import</string>
    <!-- Preference Titles -->
    <string name="settings_backup_heading">Logged in as:</string>
    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="location_settings">GPS Settings</string>
    <string name="notifiaction_settings">Notification Settings</string>
    <string name="diary_settings">Diary Settings</string>
    <string name="login_to_google_to_allow_uploading_and_downloading_backups">Login into you\'re Google-Account to enable downloading and uploading backups.</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logout_google">Logout</string>
    <string name="latest_backup">Latest backup:</string>
    <string name="channel_name">Notification Your Story</string>
    <string name="channel_description">Notifications for Your Story</string>
    <string name="mood">Mood</string>
    <string name="thought">Thought</string>
    <string name="notification_text" >When you are in the mood you can use the buttons to capture either your mood or a thought.</string>
    <string name="retake">Retake</string>

    <!-- diary page-->
    <string name="diary_page_joy">Joy =</string>
    <string name="diary_page_anger">Anger =</string>
    <string name="diary_page_sadness">Sadness =</string>
    <string name="diary_page_disgust">Disgust =</string>
    <string name="diary_page_surprise">Surprise =</string>
    <string name="diary_page_fear">Fear =</string>
    <string name="diary_page_entries">Entries: </string>

    <string name="settings_backup_no_backup_found">No backup found.</string>
    <string name="settings_backup_download_success">Download succeeded.</string>
    <string name="settings_backup_download_success_text">You\'re download was successful</string>

</resources>