<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/location_title">

        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="location"
            app:summary="@string/settings_allow_data_collection_summary"
            app:title="@string/settings_allow_data_collection_title" />

        <SeekBarPreference
            android:defaultValue="true"
            android:max="60"
            app:defaultValue="15"
            app:dependency="location"
            app:isPreferenceVisible="true"
            app:key="interval_movement"
            app:min="1"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true"
            app:summary="@string/settings_scanning_interval_summary"
            app:title="@string/settings_scanning_interval_title" />
    </PreferenceCategory>
</PreferenceScreen>