<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/notification">
        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="notification"
            app:title="@string/settings_enable_notifications"/>
        <SeekBarPreference
            android:defaultValue="true"
            app:defaultValue="12"
            app:dependency="notification"
            app:key="interval_notification"
            app:min="1"
            app:seekBarIncrement="5"
            android:max="24"
            app:isPreferenceVisible="true"
            app:showSeekBarValue="true"
            app:title="@string/settings_notification_interval_title"
            app:summary="@string/settings_notification_interval_text"/>
    </PreferenceCategory>

</PreferenceScreen>