<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".today.thought.RecordAudioFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/record_audio_record_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/record_audio_record_button"
            android:backgroundTint="@color/non_clickable_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/record_audio_stop_button"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@+id/cancel_thought_dialog_audio"/>
        <Button
            android:id="@+id/record_audio_stop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/record_audio_stop_button"
            android:backgroundTint="@color/non_clickable_grey"
            android:layout_margin="16dp"
            app:layout_constraintLeft_toRightOf="@+id/record_audio_record_button"
            app:layout_constraintRight_toLeftOf="@id/record_audio_play_button"
            app:layout_constraintBottom_toTopOf="@+id/cancel_thought_dialog_audio"/>
        <Button
            android:id="@+id/record_audio_play_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/record_audio_play_button"
            android:backgroundTint="@color/non_clickable_grey"
            android:layout_margin="16dp"
            app:layout_constraintLeft_toRightOf="@+id/record_audio_stop_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cancel_thought_dialog_audio"/>
        <TextView
            android:id= "@+id/confirm_thought_dialog_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/finish_dialog"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:textSize="28dp" />
        <TextView
            android:id= "@+id/cancel_thought_dialog_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/confirm_thought_dialog_audio"
            android:text="@string/cancel_dialog"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:textSize="28dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>