<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_today">

    <fragment android:id="@+id/navigation_reports"
        android:name="com.example.yourstory.reports.ReportsFragment"
        android:label="@string/reports"
        tools:layout="@layout/reports_fragment">
    </fragment>

    <fragment android:id="@+id/navigation_today"
        android:name="com.example.yourstory.today.TodayFragment"
        android:label="@string/today"
        tools:layout="@layout/today_fragment">
        <action
            android:id="@+id/action_navigation_today_to_thought_dialog"
            app:destination="@id/thought_dialog" />
        <action
            android:id="@+id/action_navigation_today_to_likertDialog"
            app:destination="@id/likertDialog" />
        <action
            android:id="@+id/action_navigation_today_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment android:id="@+id/navigation_diary"
        android:name="com.example.yourstory.diary.DiaryFragment"
        android:label="@string/diary"
        tools:layout="@layout/diary_fragment"/>
    <fragment
        android:id="@+id/thought_dialog"
        android:name="com.example.yourstory.today.thought.AddThoughtDialog"
        android:label="Create Thought"
        tools:layout="@layout/thought_dialog_fragment" >
        <action
            android:id="@+id/action_thought_dialog_to_takePictureFragment"
            app:destination="@id/takePictureFragment" />
        <action
            android:id="@+id/action_thought_dialog_to_recordAudioFragment"
            app:destination="@id/recordAudioFragment" />
        <action
            android:id="@+id/action_thought_dialog_to_recordTextFragment"
            app:destination="@id/recordTextFragment" />
        <action
            android:id="@+id/action_thought_dialog_to_recordLocationFragment"
            app:destination="@id/recordLocationFragment" />
    </fragment>
    <fragment
        android:id="@+id/likertDialog"
        android:name="com.example.yourstory.today.likert.LikertDialog"
        android:label="Record Emotional State"
        tools:layout="@layout/likert_dialog_fragment" />

    <fragment
        android:id="@+id/helpFragment"
        android:name="com.example.yourstory.help.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/help_fragment" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.yourstory.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/takePictureFragment"
        android:name="com.example.yourstory.TakePictureFragment"
        android:label="take_picture_fragment"
        tools:layout="@layout/take_picture_fragment" />
    <fragment
        android:id="@+id/recordAudioFragment"
        android:name="com.example.yourstory.RecordAudioFragment"
        android:label="record_audio_fragment"
        tools:layout="@layout/record_audio_fragment" />
    <fragment
        android:id="@+id/recordTextFragment"
        android:name="com.example.yourstory.RecordTextFragment"
        android:label="record_text_fragment"
        tools:layout="@layout/record_text_fragment" />
    <fragment
        android:id="@+id/recordLocationFragment"
        android:name="com.example.yourstory.RecordLocationFragment"
        android:label="record_location_fragment"
        tools:layout="@layout/record_location_fragment" />
</navigation>