<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".help.HelpFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/help_page_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_story_help_page_heading"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="16dp"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/help_page_content_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/help_page_heading"
            app:layout_constraintBottom_toTopOf="@+id/help_page_credentials_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="16dp"
            android:text="@string/your_story_help_page_content"
            android:textColor="@color/black"
            android:scrollbars="vertical"/>
        <TextView
            android:id="@+id/help_page_credentials_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/your_story_help_page_devs"
            android:layout_margin="16dp"
            android:textSize="18dp"
            android:textColor="@color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>